2015/04/27: Version 1.91 alpha 2
=================================

- Added templates item for tables & fields
- Added sortable table for tables & fields
- Added more parameters in tables form
- Added more parameters in fields form
- Added more field database in tables form
- Added more field database in fields form
- Added checkAll checkbox in modules & tables form

=================================
2014/01/02: Version 1.91 alpha 1
=================================

- Refactoring
- Rewritten from scratch
- Added templates admin
- Added fields table
- Added more parameters in fields form

=================================
2013/09/02: Version 1.91 alpha 1
=================================

- Skipped to versione 1.91 alpha 1

=================================
2013/05/12: Version 1.39 RC 1
=================================

- Added minimum php textbox in admin/modules.php
- Added minimum xoops textbox in admin/modules.php
- Added minimum admin textbox in admin/modules.php
- Added minimum mysql textbox in admin/modules.php
- fixed bugs

=================================
2013/04/01: Version 1.39 Beta 4
=================================

- fixed several error notices and bugs

=================================
2013/03/28: Version 1.39 Beta 3
=================================

- fixed several error notices and bugs

=================================
2013/03/25: Version 1.39 Beta 2
=================================

- fixed several error notices and bugs

=================================
2013/03/22: Version 1.39 Beta 1
=================================

- fixed several error notices and bugs

=================================
2013/02/23: Version 1.38.6 Beta 1
=================================

- added: fields notifications, paypal button and subversion in modules
- added: fields notifications in tables
- modified: file const_header.php for subversion
- modified: file const_admin_about.php for paypal button
- added: module info pulled from Preferences